# futility

./: .bazelrc  .gitignore  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  go.mod  go.sum  multitool.lock.json
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: README.md  publish-bcr.yml  publish.yml  tag-and-release.yml  test.yml
ai/: spec.md
cmd/serial_upload/: BUILD.bazel  README.md  main.go  main_test.go  spec_01.md
cmd/tbd/: BUILD.bazel  main.go
seriallib/: BUILD.bazel  seriallib.go
