# LICENSE sha256: c71d239df91726fc519c6eb72d318ec65820627232b2f796219e87dcf35d0ab4

load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "gazelle")

# bazel run //:gazelle
# gazelle:prefix github.com/filmil/futility
gazelle(name = "gazelle")

# bazel run //:buildifier
buildifier(
    name = "buildifier",
)
