# LICENSE sha265: c71d239df91726fc519c6eb72d318ec65820627232b2f796219e87dcf35d0ab4

module(
    name = "futility",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_creack_pty")

# Uncomment to override
#include("//local:1.MODULE.bazel")
