# LICENSE sha265: c71d239df91726fc519c6eb72d318ec65820627232b2f796219e87dcf35d0ab4

module(
    name = "futility",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "rules_pkg", version = "1.0.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_creack_pty", "org_golang_x_sys", "st_bug_go_serial")

# multitool
bazel_dep(name = "rules_multitool", version = "1.9.0")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(
    hub_name = "futility_multitool",
    lockfile = "//:multitool.lock.json",
)
use_repo(multitool, "futility_multitool", "multitool")

register_toolchains("@futility_multitool//toolchains:all")

# Uncomment to override
#include("//local:1.MODULE.bazel")
