load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//build:my_package_name.bzl", "name_part_from_command_line")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

go_library(
    name = "serial_upload_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/futility/cmd/serial_upload",
    visibility = ["//visibility:private"],
    deps = ["//seriallib"],
)

go_binary(
    name = "serial_upload",
    embed = [":serial_upload_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "serial_upload_test",
    srcs = ["main_test.go"],
    embed = [":serial_upload_lib"],
    size = "small",
    deps = [
        "@com_github_creack_pty//:pty",
        "@org_golang_x_sys//unix",
        "@org_golang_x_term//:term",
    ],
)

name_part_from_command_line(
    name = "name_part_from_command_line",
    build_setting_default = "@set_me@",
)

pkg_zip(
    name = "zip",
    srcs = [
        ":serial_upload",
    ],
    package_dir = "serial_upload",
    package_file_name = "serial_upload-{name_part}.zip",
    package_variables = ":name_part_from_command_line",
)
