# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tbd_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/futility/cmd/tbd",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "tbd",
    embed = [":tbd_lib"],
    visibility = ["//visibility:public"],
)